// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edge stack matches the committed baseline 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AllowLambdaServiceToAssumeRoleC9749BDE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "edgelambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "certificatearnE930962C": {
      "Properties": {
        "Description": "CDK parameter stored for cross region ACM certificate",
        "Name": "/blip/ci/certificate-arn",
        "Type": "String",
        "Value": {
          "Ref": "cibliplambdaedgecertificateB725C99E",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "cibliplambdaedgecertificateB725C99E": {
      "Properties": {
        "DomainName": "app.ci.your-loops.test",
        "DomainValidationOptions": [
          {
            "DomainName": "app.ci.your-loops.test",
            "HostedZoneId": "ZCITESTZONE0001",
          },
          {
            "DomainName": "www.ci.your-loops.test",
            "HostedZoneId": "ZCITESTZONE0001",
          },
        ],
        "SubjectAlternativeNames": [
          "www.ci.your-loops.test",
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "ci-blip-lambda-edge/ci-blip-lambda-edge-certificate",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "cibliprequestviewerCurrentVersionBBC422FD726324d4eb5a93d0509637db1e57ee3c": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "cibliprequestviewerD090C18F",
        },
      },
      "Type": "AWS::Lambda::Version",
      "UpdateReplacePolicy": "Retain",
    },
    "cibliprequestviewerD090C18F": {
      "DependsOn": [
        "AllowLambdaServiceToAssumeRoleC9749BDE",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "[ASSET_HASH]",
        },
        "FunctionName": "ci-blip-request-viewer",
        "Handler": "cloudfront-ci-env-blip-request-viewer.handler",
        "Role": {
          "Fn::GetAtt": [
            "AllowLambdaServiceToAssumeRoleC9749BDE",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "edgelambdaarnE38C6C5E": {
      "Properties": {
        "Description": "CDK parameter stored for cross region Edge Lambda",
        "Name": "/blip/ci/lambda-edge-arn",
        "Type": "String",
        "Value": {
          "Ref": "cibliprequestviewerCurrentVersionBBC422FD726324d4eb5a93d0509637db1e57ee3c",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`web stack matches the committed baseline 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "ciblipdeploymentwithinvalidationAwsCliLayerB5FD6924",
          },
        ],
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::cdk-hnb659fds-assets-111111111111-eu-west-1",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::cdk-hnb659fds-assets-111111111111-eu-west-1/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "comdiabeloopyourloopscfci2606EF26",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "comdiabeloopyourloopscfci2606EF26",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "comdiabeloopyourloopscfci2606EF26",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ciblipGetCertificateParameter9978CB1E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ciblipGetCertificateParameterCustomResourcePolicyC8DEE11C",
      ],
      "Properties": {
        "Create": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/certificate-arn"},"region":"us-east-1","physicalResourceId":{"id":"app.ci.your-loops.test-www.ci.your-loops.test"}}",
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/certificate-arn"},"region":"us-east-1","physicalResourceId":{"id":"app.ci.your-loops.test-www.ci.your-loops.test"}}",
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "ciblipGetCertificateParameterCustomResourcePolicyC8DEE11C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParameter*",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:111111111111:parameter/blip/ci/certificate-arn",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ciblipGetCertificateParameterCustomResourcePolicyC8DEE11C",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ciblipGetParameterCustomResourcePolicy7FF09F86": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParameter*",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:111111111111:parameter/blip/ci/lambda-edge-arn",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ciblipGetParameterCustomResourcePolicy7FF09F86",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ciblipGetParameterD13AD1D6": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ciblipGetParameterCustomResourcePolicy7FF09F86",
      ],
      "Properties": {
        "Create": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/lambda-edge-arn"},"region":"us-east-1","physicalResourceId":{"id":"a4412d4147bc72f9a9d46e3980ef099a1ec31be84cc44ac8cd64a08c7bed06ac-1.2.3"}}",
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/lambda-edge-arn"},"region":"us-east-1","physicalResourceId":{"id":"a4412d4147bc72f9a9d46e3980ef099a1ec31be84cc44ac8cd64a08c7bed06ac-1.2.3"}}",
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "ciblipcloudfrontCFDistribution78F41495": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "app.ci.your-loops.test",
            "www.ci.your-loops.test",
          ],
          "CacheBehaviors": [
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/maintenance/*",
              "TargetOriginId": "ciblipciblipcloudfrontOrigin2D480F97F",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "cloudfront deployment for ci blip 1.2.3",
          "CustomErrorResponses": [
            {
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "LambdaFunctionAssociations": [
              {
                "EventType": "viewer-request",
                "LambdaFunctionARN": {
                  "Fn::GetAtt": [
                    "ciblipGetParameterD13AD1D6",
                    "Parameter.Value",
                  ],
                },
              },
            ],
            "TargetOriginId": "ciblipciblipcloudfrontOrigin10B503A43",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "comdiabeloopyourloopscfci2606EF26",
                  "RegionalDomainName",
                ],
              },
              "Id": "ciblipciblipcloudfrontOrigin10B503A43",
              "OriginPath": "/blip/1.2.3",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "cibliporiginAccessIdentityDC99AF16",
                      },
                    ],
                  ],
                },
              },
            },
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "comdiabeloopyourloopscfci2606EF26",
                  "RegionalDomainName",
                ],
              },
              "Id": "ciblipciblipcloudfrontOrigin2D480F97F",
              "OriginPath": "/maintenance",
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_100",
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Fn::GetAtt": [
                "ciblipGetCertificateParameter9978CB1E",
                "Parameter.Value",
              ],
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "ciblipdeploymentwithinvalidationAwsCliLayerB5FD6924": {
      "Properties": {
        "Content": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "ciblipdeploymentwithinvalidationCustomResourceE8D42390": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketKeyPrefix": "blip/1.2.3",
        "DestinationBucketName": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "DistributionId": {
          "Ref": "ciblipcloudfrontCFDistribution78F41495",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          "cdk-hnb659fds-assets-111111111111-eu-west-1",
        ],
        "SourceObjectKeys": [
          "[ASSET_HASH]",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "ciblipmaintenancepageAwsCliLayer6A7544AC": {
      "Properties": {
        "Content": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "ciblipmaintenancepageCustomResource4F2C65B7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketKeyPrefix": "maintenance",
        "DestinationBucketName": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "DistributionId": {
          "Ref": "ciblipcloudfrontCFDistribution78F41495",
        },
        "DistributionPaths": [
          "/index.html",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          "cdk-hnb659fds-assets-111111111111-eu-west-1",
        ],
        "SourceObjectKeys": [
          "[ASSET_HASH]",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "cibliporiginAccessControl8749AE82": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "ciblipcibliporiginAccessControlB512C928",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "cibliporiginAccessIdentityDC99AF16": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "Allows CloudFront to reach the bucket",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "ciblipwebsitealiasrecord24BE9CD49": {
      "Properties": {
        "HostedZoneId": "ZCITESTZONE0001",
        "Name": "www.ci.your-loops.test.",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "ciblipcloudfrontCFDistribution78F41495",
              "DomainName",
            ],
          },
        ],
        "TTL": "300",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "ciblipwebsitealiasrecord8C05CC44": {
      "Properties": {
        "HostedZoneId": "ZCITESTZONE0001",
        "Name": "app.ci.your-loops.test.",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "ciblipcloudfrontCFDistribution78F41495",
              "DomainName",
            ],
          },
        ],
        "TTL": "300",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "comdiabeloopyourloopscfci2606EF26": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "com.diabeloop.yourloops-cf.ci",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "NoncurrentVersionExpiration": {
                "NoncurrentDays": 30,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:blip/1.2.3:684eab70",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:maintenance:941c1610",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "comdiabeloopyourloopscfciAutoDeleteObjectsCustomResource4677D64C": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "comdiabeloopyourloopscfciPolicyDE652590",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "comdiabeloopyourloopscfciPolicyDE652590": {
      "Properties": {
        "Bucket": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "comdiabeloopyourloopscfci2606EF26",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "comdiabeloopyourloopscfci2606EF26",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "comdiabeloopyourloopscfci2606EF26",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "comdiabeloopyourloopscfci2606EF26",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "cibliporiginAccessIdentityDC99AF16",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "comdiabeloopyourloopscfci2606EF26",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "ciblipcloudfrontCFDistribution78F41495",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "comdiabeloopyourloopscfci2606EF26",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`web stack matches the committed baseline in maintenance mode 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "ciblipdeploymentwithinvalidationAwsCliLayerB5FD6924",
          },
        ],
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::cdk-hnb659fds-assets-111111111111-eu-west-1",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::cdk-hnb659fds-assets-111111111111-eu-west-1/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "comdiabeloopyourloopscfci2606EF26",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "comdiabeloopyourloopscfci2606EF26",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "comdiabeloopyourloopscfci2606EF26",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ciblipGetCertificateParameter9978CB1E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ciblipGetCertificateParameterCustomResourcePolicyC8DEE11C",
      ],
      "Properties": {
        "Create": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/certificate-arn"},"region":"us-east-1","physicalResourceId":{"id":"app.ci.your-loops.test-www.ci.your-loops.test"}}",
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/certificate-arn"},"region":"us-east-1","physicalResourceId":{"id":"app.ci.your-loops.test-www.ci.your-loops.test"}}",
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "ciblipGetCertificateParameterCustomResourcePolicyC8DEE11C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParameter*",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:111111111111:parameter/blip/ci/certificate-arn",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ciblipGetCertificateParameterCustomResourcePolicyC8DEE11C",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ciblipGetParameterCustomResourcePolicy7FF09F86": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParameter*",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:111111111111:parameter/blip/ci/lambda-edge-arn",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ciblipGetParameterCustomResourcePolicy7FF09F86",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ciblipGetParameterD13AD1D6": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ciblipGetParameterCustomResourcePolicy7FF09F86",
      ],
      "Properties": {
        "Create": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/lambda-edge-arn"},"region":"us-east-1","physicalResourceId":{"id":"a4412d4147bc72f9a9d46e3980ef099a1ec31be84cc44ac8cd64a08c7bed06ac-1.2.3"}}",
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": "{"service":"SSM","action":"getParameter","parameters":{"Name":"/blip/ci/lambda-edge-arn"},"region":"us-east-1","physicalResourceId":{"id":"a4412d4147bc72f9a9d46e3980ef099a1ec31be84cc44ac8cd64a08c7bed06ac-1.2.3"}}",
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "ciblipcloudfrontCFDistribution78F41495": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "app.ci.your-loops.test",
            "www.ci.your-loops.test",
          ],
          "CacheBehaviors": [
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "LambdaFunctionAssociations": [
                {
                  "EventType": "viewer-request",
                  "LambdaFunctionARN": {
                    "Fn::GetAtt": [
                      "ciblipGetParameterD13AD1D6",
                      "Parameter.Value",
                    ],
                  },
                },
              ],
              "PathPattern": "/disabled/*",
              "TargetOriginId": "ciblipciblipcloudfrontOrigin2D480F97F",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "cloudfront deployment for ci blip 1.2.3",
          "CustomErrorResponses": [
            {
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "TargetOriginId": "ciblipciblipcloudfrontOrigin10B503A43",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "comdiabeloopyourloopscfci2606EF26",
                  "RegionalDomainName",
                ],
              },
              "Id": "ciblipciblipcloudfrontOrigin10B503A43",
              "OriginPath": "/maintenance",
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "comdiabeloopyourloopscfci2606EF26",
                  "RegionalDomainName",
                ],
              },
              "Id": "ciblipciblipcloudfrontOrigin2D480F97F",
              "OriginPath": "/blip/1.2.3",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "cibliporiginAccessIdentityDC99AF16",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Fn::GetAtt": [
                "ciblipGetCertificateParameter9978CB1E",
                "Parameter.Value",
              ],
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "ciblipdeploymentwithinvalidationAwsCliLayerB5FD6924": {
      "Properties": {
        "Content": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "ciblipdeploymentwithinvalidationCustomResourceE8D42390": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketKeyPrefix": "blip/1.2.3",
        "DestinationBucketName": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "DistributionId": {
          "Ref": "ciblipcloudfrontCFDistribution78F41495",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          "cdk-hnb659fds-assets-111111111111-eu-west-1",
        ],
        "SourceObjectKeys": [
          "[ASSET_HASH]",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "ciblipmaintenancepageAwsCliLayer6A7544AC": {
      "Properties": {
        "Content": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-west-1",
          "S3Key": "[ASSET_HASH]",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "ciblipmaintenancepageCustomResource4F2C65B7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketKeyPrefix": "maintenance",
        "DestinationBucketName": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "DistributionId": {
          "Ref": "ciblipcloudfrontCFDistribution78F41495",
        },
        "DistributionPaths": [
          "/index.html",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          "cdk-hnb659fds-assets-111111111111-eu-west-1",
        ],
        "SourceObjectKeys": [
          "[ASSET_HASH]",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "cibliporiginAccessControl8749AE82": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "ciblipcibliporiginAccessControlB512C928",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "cibliporiginAccessIdentityDC99AF16": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "Allows CloudFront to reach the bucket",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "ciblipwebsitealiasrecord24BE9CD49": {
      "Properties": {
        "HostedZoneId": "ZCITESTZONE0001",
        "Name": "www.ci.your-loops.test.",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "ciblipcloudfrontCFDistribution78F41495",
              "DomainName",
            ],
          },
        ],
        "TTL": "300",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "ciblipwebsitealiasrecord8C05CC44": {
      "Properties": {
        "HostedZoneId": "ZCITESTZONE0001",
        "Name": "app.ci.your-loops.test.",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "ciblipcloudfrontCFDistribution78F41495",
              "DomainName",
            ],
          },
        ],
        "TTL": "300",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "comdiabeloopyourloopscfci2606EF26": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "com.diabeloop.yourloops-cf.ci",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "NoncurrentVersionExpiration": {
                "NoncurrentDays": 30,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:blip/1.2.3:684eab70",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:maintenance:941c1610",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "comdiabeloopyourloopscfciAutoDeleteObjectsCustomResource4677D64C": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "comdiabeloopyourloopscfciPolicyDE652590",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "comdiabeloopyourloopscfciPolicyDE652590": {
      "Properties": {
        "Bucket": {
          "Ref": "comdiabeloopyourloopscfci2606EF26",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "comdiabeloopyourloopscfci2606EF26",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "comdiabeloopyourloopscfci2606EF26",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "comdiabeloopyourloopscfci2606EF26",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "comdiabeloopyourloopscfci2606EF26",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "cibliporiginAccessIdentityDC99AF16",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "comdiabeloopyourloopscfci2606EF26",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "ciblipcloudfrontCFDistribution78F41495",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "comdiabeloopyourloopscfci2606EF26",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
